# telegram_bot_shopping_list

./: README.md  alembic.ini  bot.py  config.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 2024_06_23_0153-9fccc6d8955f_create_table_user.py  2024_06_23_0216-99099f0055cf_create_table_actions.py  2024_06_23_0310-28be2e2e67a5_create_tables_users_and_actions.py
core/: database.py  models.py
handlers/: __init__.py  commands.py
