[tool.poetry]
name = "telegram-bot-shopping-list"
version = "0.1.0"
description = ""
authors = ["Dmitry-Peskov <dv.peskov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
aiogram = "^3.8.0"
aiosqlite = "^0.20.0"
python-dotenv = "^1.0.1"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
